[project]
name = "microsave"
version = "0.1.0"
description = "Central Save State Microservice"
requires-python = ">=3.11"
dependencies = [
    "dnspython==2.8.0",
    "fastapi==0.136.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pymongo==4.17.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]